--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="calc-screen">
             <p>0</p>
         </div>
-        <div class="buttons">
+        <div class="buttons"> <!-- this is div -->
             <div class="btn ac bg-grey">ac</div>
             <div class="btn plus-minus bg-grey">+/-</div>
             <div class="btn percent bg-grey">%</div>
